# MultiAgent-Researcher

./: LICENSE  README.md  agents.py  app.py  pipeline.py  pyproject.toml  requirements.txt  tools.py
src/: config.py
src/agents/: __init__.py  critic_agent.py  reader_agent.py  search_agent.py  writer_agent.py
src/graph/: __init__.py  nodes.py  pipeline.py  state.py
src/tools/: __init__.py  scraper.py  search.py
src/ui/: app.py
ui/: app.py
